<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvAlcool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/alcool"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/etConsumeAlcool"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/consume_km_per_liter"
        android:inputType="numberDecimal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <EditText
        android:id="@+id/etPriceAlcool"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/tvGasoline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/gasoline"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/etConsumeGasoline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/consume_km_per_liter"
        android:inputType="numberDecimal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <EditText
        android:id="@+id/etPriceGasoline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:text="@string/button" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAlignment="center"/>


</LinearLayout>